trying to fix the last photo in the about page for mobile. Its not wide enough on mobile making the image looked compressed in a bad way

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -284,7 +284,7 @@ div.container:hover{
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
-  background-attachment: scroll;
+  background-attachment:fixed;
 }
 
 .header-about {
@@ -392,9 +392,13 @@ div.container:hover{
     padding: 15px;
   }
 
-  .header-about img,
-  .section-about-2 img {
+  .header-about img {
     width: 80%;
     max-width: 300px;
+  }
+
+  .section-about-2 img {
+    width: 80%;
+    max-width: 400;
   }
 }
